working test with external class